# josephsgraphiccode

./: Assign3README.md  Box.cpp  Box.h  CLI.cpp  CLI.h  CMakeLists.txt  Camera.cpp  Camera.h  ClearCommand.cpp  ClearCommand.h  Command.cpp  Command.h  EndianChecks.cpp  EndianChecks.h  Filter.cpp  Filter.h  Global.h  Light.cpp  Light.h  LookatCommand.cpp  LookatCommand.h  Matrix44.cpp  Matrix44.h  OrthoCommand.cpp  OrthoCommand.h  OrthocameraCommand.cpp  OrthocameraCommand.h  PerspCamera.cpp  PerspCamera.h  PerspectiveCommand.cpp  PerspectiveCommand.h  PopCommand.cpp  PopCommand.h  PushCommand.cpp  PushCommand.h  README.md  Ray.cpp  Ray.h  ResetCommand.cpp  ResetCommand.h  (+35 more)
images/: eeyore.tifstat  eeyore2.tifstat  eeyore3.tifstat  eeyore4.tifstat  play.tifstat  play2.tifstat  play3.tifstat  playpal.tifstat  playrgb.tifstat  pooh.tifstat  pooh_le.tifstat  tagnames
scripts/: project5test.cli  test2.cli  test3.cli  test4.cli  test5.cli
